[project]
authors = [{name = "Prowler Engineering", email = "engineering@prowler.com"}]
dependencies = [
  "celery (==5.6.2)",
  "dj-rest-auth[with_social,jwt] (==7.0.1)",
  "django (==5.1.15)",
  "django-allauth[saml] (==65.15.0)",
  "django-celery-beat (==2.9.0)",
  "django-celery-results (==2.6.0)",
  "django-cors-headers==4.4.0",
  "django-environ==0.11.2",
  "django-filter==24.3",
  "django-guid==3.5.0",
  "django-postgres-extra (==2.0.9)",
  "djangorestframework==3.15.2",
  "djangorestframework-jsonapi==7.0.2",
  "djangorestframework-simplejwt (==5.5.1)",
  "drf-nested-routers (==0.95.0)",
  "drf-spectacular==0.27.2",
  "drf-spectacular-jsonapi==0.5.1",
  "defusedxml==0.7.1",
  "gunicorn==23.0.0",
  "lxml==5.3.2",
  "prowler @ git+https://github.com/prowler-cloud/prowler.git@master",
  "psycopg2-binary==2.9.9",
  "pytest-celery[redis] (==1.3.0)",
  "sentry-sdk[django] (==2.56.0)",
  "uuid6==2024.7.10",
  "openai (==1.109.1)",
  "xmlsec==1.3.14",
  "h2 (==4.3.0)",
  "markdown (==3.10.2)",
  "drf-simple-apikey (==2.2.1)",
  "matplotlib (==3.10.8)",
  "reportlab (==4.4.10)",
  "neo4j (==6.1.0)",
  "cartography (==0.135.0)",
  "gevent (==25.9.1)",
  "werkzeug (==3.1.7)",
  "sqlparse (==0.5.5)",
  "fonttools (==4.62.1)"
]
description = "Prowler's API (Django/DRF)"
license = "Apache-2.0"
name = "prowler-api"
package-mode = false
# Needed for the SDK compatibility
requires-python = ">=3.11,<3.13"
version = "1.26.0"

[dependency-groups]
dev = [
  "bandit==1.7.9",
  "coverage==7.5.4",
  "django-silk==5.3.2",
  "docker==7.1.0",
  "filelock==3.20.3",
  "freezegun==1.5.1",
  "mypy==1.10.1",
  "pylint==3.2.5",
  "pytest==9.0.3",
  "pytest-cov==5.0.0",
  "pytest-django==4.8.0",
  "pytest-env==1.1.3",
  "pytest-randomly==3.15.0",
  "pytest-xdist==3.6.1",
  "ruff==0.5.0",
  "safety==3.7.0",
  "tqdm==4.67.1",
  "vulture==2.14",
  "prek==0.3.9",
]
