[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[dependency-groups]
dev = [
  "pytest==9.0.3"
]

[project]
dependencies = [
  "fastmcp==2.14.0",
  "httpx==0.28.1"
]
description = "MCP server for Prowler ecosystem"
name = "prowler-mcp"
readme = "README.md"
requires-python = ">=3.12"
version = "0.5.0"

[project.scripts]
prowler-mcp = "prowler_mcp_server.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
