[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[dependency-groups]
dev = [
  "bandit==1.9.4",
  "pytest==9.0.3",
  "ruff==0.15.11",
  "vulture==2.14"
]

[project]
dependencies = [
  "fastmcp==3.2.4",
  "httpx==0.28.1"
]
description = "MCP server for Prowler ecosystem"
name = "prowler-mcp"
readme = "README.md"
requires-python = ">=3.12"
version = "0.8.0"

[project.scripts]
prowler-mcp = "prowler_mcp_server.main:main"

[tool.pytest]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Shared ruff baseline (kept in sync with api/pyproject.toml).
# target-version tracks this project's lowest supported Python.
[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Defaults (E4/E7/E9, F) plus import sorting, modern-syntax upgrades, and
# comprehension lints — all mechanically auto-fixable. flake8-bugbear (B) is a
# good next step but needs manual cleanup, so it is left out of the shared
# baseline for now.
extend-select = [
  "I",  # isort — import ordering
  "UP",  # pyupgrade — modern syntax for the min supported Python
  "C4"  # flake8-comprehensions
]

[tool.uv]
package = true
